PTT pressed issue